[package]
name = "secrets-provider-inmemory"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
greentic-interfaces = { workspace = true, default-features = false, features = ["bindings-rust", "provider-core-v1"] }
wit-bindgen = { workspace = true }
