[package]
name = "secrets-provider-vault-kv"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
greentic-interfaces = { workspace = true, default-features = false, features = ["bindings-rust", "provider-core-v1"] }
wit-bindgen = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
vaultrs = { workspace = true }
rustls-pemfile = { workspace = true }
