[package]
name = "greentic-config-types"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Pure configuration schema for Greentic hosts."
repository = "https://github.com/greentic-ai/greentic-secrets"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
greentic-types = { workspace = true }
