[package]
name = "greentic-config"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Config resolver for Greentic hosts (defaults + files + env + CLI) with validation and provenance."
repository = "https://github.com/greentic-ai/greentic-secrets"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = "5"
once_cell = { workspace = true }
greentic-types = { workspace = true }
greentic-config-types = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
