[package]
name = "greentic-secrets-runner"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Host bridge for environment-backed secrets with tenant policy enforcement."
repository = "https://github.com/greentic-ai/greentic-secrets"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_yaml = { workspace = true }
greentic-interfaces = { workspace = true, default-features = false, features = ["bindings-rust", "provider-core-v1"] }
serde_json = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
