[package]
name = "greentic-secrets"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "CLI for Greentic secrets (dev tooling, scaffold/wizard/apply/init)."
repository = "https://github.com/greentic-ai/greentic-secrets"

[[bin]]
name = "greentic-secrets"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
greentic_secrets_core = { workspace = true, features = ["dev-store"] }
greentic_secrets_spec = { workspace = true }
toml = { workspace = true }
greentic-config = { workspace = true }
greentic-config-types = { workspace = true }
base64 = { workspace = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
reqwest = { workspace = true, features = ["json", "rustls"] }
greentic-types = { workspace = true }
handlebars = { workspace = true }
time = { workspace = true }
wasmtime = { workspace = true }
wat = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
