[package]
name = "secrets-provider-azure-kv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
serde = { workspace = true }
serde_json = { workspace = true }
secrets-core = { path = "../../secrets-core" }
rsa = "0.9.8"
