[package]
name = "greentic-secrets-provider-aws-sm"
version.workspace = true
edition = "2021"
license = "MIT"
description = "AWS Secrets Manager backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-aws-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_aws_sm"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22.1"
greentic_secrets_spec = { workspace = true }
rand = "0.9.2"
serde = { workspace = true }
