[package]
name = "greentic-secrets-provider-aws-sm"
version.workspace = true
edition = "2021"
license = "MIT"
description = "AWS Secrets Manager backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-aws-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_aws_sm"

[dependencies]
anyhow = { workspace = true }
aws-config = "1"
aws-sdk-secretsmanager = "1"
aws-sdk-kms = "1"
aws-types = "1"
aws-smithy-types = "1"
greentic_secrets_spec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
