[package]
name = "greentic-secrets-provider-azure-kv"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Azure Key Vault backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-azure-kv"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_azure_kv"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22.1"
greentic_secrets_spec = { workspace = true }
rsa = "0.9.6"
serde = { workspace = true }
serde_json = { workspace = true }
