[package]
name = "greentic-secrets-provider-azure-kv"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Azure Key Vault backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-azure-kv"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_azure_kv"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
greentic_secrets_spec = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
