[package]
name = "greentic-secrets-provider-dev"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Local development backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-dev"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_dev"

[dependencies]
base64 = "0.22.1"
fs2 = "0.4"
parking_lot = "0.12"
async-trait = "0.1"
greentic_secrets_spec = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
