[package]
name = "greentic-secrets-provider-gcp-sm"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Google Secret Manager backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-gcp-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_gcp_sm"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
greentic_secrets_spec = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
