[package]
name = "greentic-secrets-provider-gcp-sm"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Google Secret Manager backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-gcp-sm"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_gcp_sm"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
greentic_secrets_core = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
