[package]
name = "greentic-secrets-provider-k8s"
version.workspace = true
edition = "2021"
license = "MIT"
description = "Kubernetes Secrets backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-k8s"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]
publish = false

[lib]
name = "secrets_provider_k8s"

[features]
default = []
sealedsecrets = []

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22.1"
greentic-secrets-spec = { path = "../../greentic-secrets-spec", version = "0.1.2" }
greentic-secrets-support = { path = "../../greentic-secrets-support", version = "0.1.2" }
rand = "0.9.2"
serde = { workspace = true }
tracing = { workspace = true }
