[package]
name = "greentic-secrets-provider-k8s"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "Kubernetes Secrets backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-k8s"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_k8s"

[features]
default = []
sealedsecrets = []

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
