[package]
name = "greentic-secrets-provider-vault-kv"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "secrets_provider_vault_kv"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
rand = "0.9.2"
serde = { workspace = true }
secrets-core = { package = "greentic-secrets-core", version = "=0.1.1", path = "../../greentic-secrets-core" }
tracing = { workspace = true }
