[package]
name = "greentic-secrets-provider-vault-kv"
version.workspace = true
edition = "2021"
license = "MIT"
description = "HashiCorp Vault KV backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-vault-kv"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]
publish = false

[lib]
name = "secrets_provider_vault_kv"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
base64 = "0.22.1"
greentic-secrets-spec = { path = "../../greentic-secrets-spec", version = "=0.1.3" }
greentic-secrets-support = { path = "../../greentic-secrets-support", version = "=0.1.3" }
rand = "0.9.2"
serde = { workspace = true }
tracing = { workspace = true }
