[package]
name = "greentic-secrets-provider-vault-kv"
version.workspace = true
edition.workspace = true
license = "MIT"
description = "HashiCorp Vault KV backend for the Greentic secrets core."
repository = "https://github.com/greentic-ai/greentic-secrets"
readme = "README.md"
documentation = "https://docs.rs/greentic-secrets-provider-vault-kv"
keywords = ["secrets", "greentic", "kubernetes", "cloud", "envelope"]
categories = ["config", "authentication", "cryptography"]
include = ["src/**", "README.md", "LICENSE", "Cargo.toml"]

[lib]
name = "secrets_provider_vault_kv"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
greentic_secrets_spec = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
once_cell = { workspace = true }
