[package]
name = "secrets-provider-k8s"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
sealedsecrets = []

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
rand = "0.9.2"
serde = { workspace = true }
secrets-core = { path = "../../secrets-core" }
tracing = { workspace = true }
